# doocut_0519

./: .gitignore  README.md
src/doocut_bringup/: package.xml  setup.cfg  setup.py
src/doocut_bringup/config/: params.yaml
src/doocut_bringup/launch/: debug.launch.py  system.launch.py  vision.launch.py  vision_only.launch.py  voice.launch.py
src/doocut_interfaces/: CMakeLists.txt  package.xml
src/doocut_interfaces/action/: PhotoSession.action
src/doocut_interfaces/msg/: ThemeProps.msg
src/doocut_interfaces/srv/: CheckWearing.srv  GetTheme.srv  SrvDepthPosition.srv
src/doocut_tts/: package.xml  setup.cfg  setup.py
src/doocut_tts/doocut_tts/: tts_node.py
src/object_detection/: package.xml  setup.py
src/object_detection/object_detection/: bbox_viewer.py  detection.py  visualize.py  wearing_check.py  yolo.py
src/object_detection/resource/: class_name.json  class_name_tool.json
src/od_msg/: CMakeLists.txt  package.xml
src/od_msg/srv/: SrvDepthPosition.srv
src/photo_booth_manager/: package.xml  setup.cfg  setup.py
src/photo_booth_manager/photo_booth_manager/: collage.py  manager_node.py  qr_util.py  web_server.py
src/realsense_subscriber/: package.xml  setup.cfg  setup.py
src/realsense_subscriber/realsense_subscriber/: subscriber_img.py  subscriber_txt.py
src/robot_control/: package.xml  setup.py
src/robot_control/resource/: T_gripper2camera.npy  waypoints.yaml
src/robot_control/robot_control/: onrobot.py  photo_motion.py  robot_control.py
src/voice_processing/: package.xml  setup.cfg  setup.py
src/voice_processing/resource/: scene_map.yaml  theme_map.yaml
src/voice_processing/voice_processing/: MicController.py  STT.py  get_keyword.py  scene_keyword_extractor.py  stt.py  wakeup_word.py
